RESOLVED FIXED82512
"Sticky" or slow scrolling on some sites
https://bugs.webkit.org/show_bug.cgi?id=82512
Summary "Sticky" or slow scrolling on some sites
Anders Carlsson
Reported 2012-03-28 13:16:23 PDT
"Sticky" or slow scrolling on some sites
Attachments
Patch (5.43 KB, patch)
2012-03-28 13:20 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2012-03-28 13:20:28 PDT
Anders Carlsson
Comment 2 2012-03-28 13:37:08 PDT
Note You need to log in before you can comment on or make changes to this bug.